--- a/PillReminder/src/PillReminder.API/PillReminder.API.csproj
+++ b/PillReminder/src/PillReminder.API/PillReminder.API.csproj
@@ -7,7 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PillReminder.Comunication\PillReminder.Comunication.csproj" />
+    <ProjectReference Include="..\PillReminder.Exception\PillReminder.Exception.csproj" />
+    <ProjectReference Include="..\PillReminder.Infrastructure\PillReminder.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
