--- a/PillReminder/src/PillReminder.API/PillReminder.API.csproj
+++ b/PillReminder/src/PillReminder.API/PillReminder.API.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PillReminder.Comunication\PillReminder.Comunication.csproj" />
+    <ProjectReference Include="..\PillReminder.Comunication\PillReminder.Communication.csproj" />
     <ProjectReference Include="..\PillReminder.Exception\PillReminder.Exception.csproj" />
     <ProjectReference Include="..\PillReminder.Infrastructure\PillReminder.Infrastructure.csproj" />
   </ItemGroup>
