--- a/PillReminder/src/PillReminderApplication/PillReminderApplication.csproj
+++ b/PillReminder/src/PillReminderApplication/PillReminderApplication.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="MD5" Version="2.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PillReminder.Comunication\PillReminder.Communication.csproj" />
+    <ProjectReference Include="..\PillReminder.Exception\PillReminder.Exception.csproj" />
+    <ProjectReference Include="..\PillReminder.Infrastructure\PillReminder.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
