:sparkles: Feat: Finalized remedy creation route

--- a/PillReminder/src/PillReminder.JWTAdmin/PillReminder.JWTAdmin.csproj
+++ b/PillReminder/src/PillReminder.JWTAdmin/PillReminder.JWTAdmin.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JWT" Version="10.1.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PillReminder.Exception\PillReminder.Exception.csproj" />
+  </ItemGroup>
+
 </Project>
