--- a/PillReminder/src/PillReminder.API/PillReminder.API.csproj
+++ b/PillReminder/src/PillReminder.API/PillReminder.API.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\PillReminder.Comunication\PillReminder.Communication.csproj" />
     <ProjectReference Include="..\PillReminder.Exception\PillReminder.Exception.csproj" />
     <ProjectReference Include="..\PillReminder.Infrastructure\PillReminder.Infrastructure.csproj" />
+    <ProjectReference Include="..\PillReminderApplication\PillReminderApplication.csproj" />
   </ItemGroup>
 
 </Project>
